--- a/index.html
+++ b/index.html
@@ -334,8 +334,8 @@
                                             프로젝트나 과제의 코드를 업로드합니다.
                                         </div>
                                     </div>
-                                    <div class="col-auto">
-                                        <i class="fas fa-brands fa-github fa-2x text-gray-300"></i>
+                                    <div class="col-3">
+                                        <img src="img/logos/github_logo.svg" alt="깃허브로고">
                                     </div>
                                 </div>
                             </div>
@@ -354,8 +354,8 @@
                                             공부한 것을 기록합니다.
                                         </div>
                                     </div>
-                                    <div class="col-auto">
-                                        <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
+                                    <div class="col-3">
+                                        <img src="img/logos/velog_logo.svg" alt="벨로그로고">
                                     </div>
                                 </div>
                             </div>
@@ -370,7 +370,6 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Contact</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
 
                 <form id="contactForm">
@@ -424,8 +423,8 @@
                 <div class="row align-items-center">
                     <div class="col-lg-4 text-lg-start">Copyright &copy; My portfolio 2023</div>
                     <div class="col-lg-4 text-lg-end">
-                        <a class="link-dark text-decoration-none me-3" href="#!">Privacy Policy</a>
-                        <a class="link-dark text-decoration-none" href="#!">Terms of Use</a>
+                        <a class="link-dark text-decoration-none me-3" href="#">Privacy Policy</a>
+                        <a class="link-dark text-decoration-none" href="#">Terms of Use</a>
                     </div>
                 </div>
             </div>
@@ -447,11 +446,13 @@
                                     <a href="https://jaeyyyyy.github.io/" target="_blank"><img class="img-fluid d-block mx-auto" src="img/portfolio1.png" alt=".." /></a>
                                     <div class="modal-text">
                                         <p class="summary">chrome 웹 스토어에 있는 모멘텀 앱을 클론코딩하였다.</p>
-                                        <li>Local Storage를 이용해서 유저가 입력한 이름으로 로그인 할 수 있게 구현했다.</li>
-                                        <li>로그인 후에는 todo-list를 추가하거나 삭제할 수 있고 완료한 todo-list를 체크하면 지워진다.</li>
-                                        <li>오픈 API를 사용해서 날씨정보를 가져왔다. gps를 기반으로 현재 위치, 온도, 날씨를 출력한다.</li>
-                                        <li>현재 시간을 출력한다.</li>
-                                        <li>배경과 하단의 명언들을 랜덤하게 출력한다.</li>
+                                        <ul>
+                                            <li>Local Storage를 이용해서 유저가 입력한 이름으로 로그인 할 수 있게 구현했다.</li>
+                                            <li>로그인 후에는 todo-list를 추가하거나 삭제할 수 있고 완료한 todo-list를 체크하면 지워진다.</li>
+                                            <li>오픈 API를 사용해서 날씨정보를 가져왔다. gps를 기반으로 현재 위치, 온도, 날씨를 출력한다.</li>
+                                            <li>현재 시간을 출력한다.</li>
+                                            <li>배경과 하단의 명언들을 랜덤하게 출력한다.</li>
+                                        </ul>
                                     </div>
                                     <div class="link-button">
                                         <a class="btn btn-dark btn-social mx-2" href="https://jaeyyyyy.github.io/" target="_blank"><i class="fa-solid fa-link"></i></a>
@@ -483,11 +484,13 @@
                                     <a href="#" target="_blank"><img class="img-fluid d-block mx-auto" src="img/portfolio/2.jpg" alt=".." /></a>
                                     <div class="modal-text">
                                         <p class="summary">설명</p>
-                                        <li>기능1</li>
-                                        <li>기능2</li>
-                                        <li>기능3</li>
-                                        <li>기능4</li>
-                                        <li>기능5</li>
+                                        <ul>
+                                            <li>기능1</li>
+                                            <li>기능2</li>
+                                            <li>기능3</li>
+                                            <li>기능4</li>
+                                            <li>기능5</li>
+                                        </ul>
                                     </div>
                                     <div class="link-button">
                                         <a class="btn btn-dark btn-social mx-2" href="#" target="_blank"><i class="fa-solid fa-link"></i></a>
@@ -519,11 +522,13 @@
                                     <a href="#" target="_blank"><img class="img-fluid d-block mx-auto" src="img/portfolio/3.jpg" alt=".." /></a>
                                     <div class="modal-text">
                                         <p class="summary">설명</p>
-                                        <li>기능1</li>
-                                        <li>기능2</li>
-                                        <li>기능3</li>
-                                        <li>기능4</li>
-                                        <li>기능5</li>
+                                        <ul>
+                                            <li>기능1</li>
+                                            <li>기능2</li>
+                                            <li>기능3</li>
+                                            <li>기능4</li>
+                                            <li>기능5</li>
+                                        </ul>
                                     </div>
                                     <div class="link-button">
                                         <a class="btn btn-dark btn-social mx-2" href="#" target="_blank"><i class="fa-solid fa-link"></i></a>
@@ -555,11 +560,13 @@
                                     <a href="#" target="_blank"><img class="img-fluid d-block mx-auto" src="img/portfolio/4.jpg" alt=".." /></a>
                                     <div class="modal-text">
                                         <p class="summary">설명</p>
-                                        <li>기능1</li>
-                                        <li>기능2</li>
-                                        <li>기능3</li>
-                                        <li>기능4</li>
-                                        <li>기능5</li>
+                                        <ul>
+                                            <li>기능1</li>
+                                            <li>기능2</li>
+                                            <li>기능3</li>
+                                            <li>기능4</li>
+                                            <li>기능5</li>
+                                        </ul>
                                     </div>
                                     <div class="link-button">
                                         <a class="btn btn-dark btn-social mx-2" href="#" target="_blank"><i class="fa-solid fa-link"></i></a>
@@ -591,11 +598,13 @@
                                     <a href="#" target="_blank"><img class="img-fluid d-block mx-auto" src="img/portfolio/5.jpg" alt=".." /></a>
                                     <div class="modal-text">
                                         <p class="summary">설명</p>
-                                        <li>기능1</li>
-                                        <li>기능2</li>
-                                        <li>기능3</li>
-                                        <li>기능4</li>
-                                        <li>기능5</li>
+                                        <ul>
+                                            <li>기능1</li>
+                                            <li>기능2</li>
+                                            <li>기능3</li>
+                                            <li>기능4</li>
+                                            <li>기능5</li>
+                                        </ul>
                                     </div>
                                     <div class="link-button">
                                         <a class="btn btn-dark btn-social mx-2" href="#" target="_blank"><i class="fa-solid fa-link"></i></a>
@@ -627,11 +636,13 @@
                                     <a href="#" target="_blank"><img class="img-fluid d-block mx-auto" src="img/portfolio/6.jpg" alt=".." /></a>
                                     <div class="modal-text">
                                         <p class="summary">설명</p>
-                                        <li>기능1</li>
-                                        <li>기능2</li>
-                                        <li>기능3</li>
-                                        <li>기능4</li>
-                                        <li>기능5</li>
+                                        <ul>
+                                            <li>기능1</li>
+                                            <li>기능2</li>
+                                            <li>기능3</li>
+                                            <li>기능4</li>
+                                            <li>기능5</li>
+                                        </ul>
                                     </div>
                                     <div class="link-button">
                                         <a class="btn btn-dark btn-social mx-2" href="#" target="_blank"><i class="fa-solid fa-link"></i></a>
